objects/Asset.object
<CustomObject>
    <fields>
        <fullName>blng__InvoiceLineBalance__c</fullName>
        <description>The sum of all posted invoice line balances for this asset.</description>
        <inlineHelpText>The sum of all posted invoice line balances for this asset.</inlineHelpText>
        <label>Invoice Line Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>db_days_InstallDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>InstallDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_PurchaseDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>PurchaseDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_UsageEndDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>UsageEndDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gps_Individual_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Application</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>My_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>Entitlement_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Assets</label>
    </listViews>
    <listViews>
        <fullName>SDO_All_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>Warranty_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All - Assets</label>
    </listViews>
    <listViews>
        <fullName>SDO_All_Enterprise_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Warranty_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>Scheduled_Servicing__c</columns>
        <columns>Service_Frequency_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Enterprise Assets</label>
    </listViews>
    <listViews>
        <fullName>SDO_Lauren_Bailey_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>User - Lauren Bailey Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>